fixes dropdown layout issue

--- a/app/assets/stylesheets/partials/item-page-sidebar.scss
+++ b/app/assets/stylesheets/partials/item-page-sidebar.scss
@@ -31,7 +31,7 @@ li.download-and-doi {
   padding: 10px;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 100;
 
   & ul {
     display: flex;
